--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 pre { 
    text-align: center;
 }
@@ -6,27 +8,27 @@ pre {
     visibility: hidden;
 }
 .hidehand {
-  padding-left: 25%;
+  padding-left: 32%;
 }
 h1 {
     font-family: address-sans-pro, sans-serif;
     font-weight: 600;
     font-style: normal;
-    margin-left: 26%;
+    text-align: center;
 }
 .chap {
     margin-left: 20%;
-    margin-right: 12%;
+    margin-right: 20%;
 }
 #frontis {
-    padding-left: 30%;
+    padding-left: 38%;
 }
 .captionnomb {
     font-family: geneo-std, sans-serif;
     font-weight: 400;
     font-style: italic;
     color:#0B549B;
-    padding-left: 35%;
+    text-align: center;
 }
 .caption2nomtright {
     font-family: mrlackboughs-pro, sans-serif;
@@ -39,15 +41,12 @@ h1 {
     font-family: address-sans-pro, sans-serif;
     font-weight: 400;
     font-style: normal;
-    padding-left: 13%;
     text-align: center;
 }
 
 .titlemt4 {
     font-family: address-sans-pro, sans-serif;
     font-weight: 400;
-    font-style: normal;
-    padding-left: 13%;
     text-align: center;
 }
 .figcenterfig120 {
@@ -56,25 +55,16 @@ h1 {
     
 .line {
     margin-left: 33%;
-    margin-right: 25%;
+    margin-right: 20%;
 }
 #Contents {
     font-family: mr-donaldson, sans-serif;
     font-weight: 200;
     font-style: normal;
-    padding-left: 24%;
-    font-size: 3%;
-  
+
 
 }
-.tdr2 {
-    font-family: geneo-std, sans-serif;
-    font-weight: 400;
-    font-style: italic;
-    padding-left: 30%;
- 
 
-}
 table {
     padding-left: 25%;
 }
@@ -82,8 +72,15 @@ table {
     font-family: geneo-std, sans-serif;
     font-weight: 400;
     font-style: italic;
+    
 
-}
+}    .tdr2 {
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: regular;
+        padding-left: 23%;
+     
+     }
 
 .tdlhang {
     font-family: geneo-std, sans-serif;
@@ -104,22 +101,21 @@ table {
     font-family: mr-donaldson, sans-serif;
     font-weight: 200;
     font-style: normal;
-    padding-left: 20%;
     font-size: 3%;
 
 }
 
  a:link {
-     color: black;
+     color: rgb(70, 64, 167);
      text-decoration-line: none;
  }
  a:visited {
-     color: rgb(63, 150, 207);
+     color: rgb(61, 78, 90);
  }
 
 h2 {
-    font-family: address-sans-pro, sans-serif;
-    font-weight: 400;
+    font-family: mr-donaldson, sans-serif;
+    font-weight: 200;
     font-style: normal;
     text-align: center;
     
@@ -168,7 +164,7 @@ p {
     font-family: laca, sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: .5em;
+    font-size: 1em;
     padding-left: 10%;
 }
 
@@ -193,7 +189,7 @@ a[title].pagenum:after {
         margin-bottom: 70px;
         height: 9px;
         width: 90px;
-        margin-right: 15%;
+        margin-right: 19%;
         float: right;
        
    
@@ -228,7 +224,7 @@ a[title].pagenum:after {
         width: .2em;
         box-sizing: content-box;
         height: 0.2em;
-        border: 0.1em solid rgb(102, 99, 99);
+        border: 0.1em solid rgb(0, 0, 0);
         position: relative;
         border-radius: 0.2em;
         margin-right: 1%;
@@ -242,33 +238,27 @@ a[title].pagenum:after {
         right: -0.25em;
         bottom: -0.1em;
         border-width: 0;
-        background: #707070;
+        background: #000000;
         width: 0.3em;
         height: 0.07em;
         transform: rotate(45deg);
      
       }
       #man {
-          padding-left: 35%;
+          padding-left: 45%;
       }
       .caption {
         font-family: geneo-std, sans-serif;
         font-weight: 400;
         font-style: italic;
         color:#0B549B;
-        padding-left: 42%;
+        text-align: center;
       }
-      .caption:first-child {
-        font-family: geneo-std, sans-serif;
-        font-weight: 400;
-        font-style: italic;
-        color:#0B549B;
-        padding-left: 42%;
-      }
+    
   
       .tb {
         margin-left: 20%;
-        margin-right: 12%;
+        margin-right: 20%;
       }
       .centernomb {
       font-family: geneo-std, sans-serif;
@@ -285,60 +275,61 @@ a[title].pagenum:after {
         text-align: center;
        
     }
+    
     #door {
         margin-left: 20%;
         margin-right: 12%;
     }
     #all {
-        margin-left: 20%;
+        margin-left: 25%;
         margin-right: 12%;
     }
     #sherlock {
-        margin-left: 20%;
+        margin-left: 23%;
         margin-right: 12%;
     }
     #glancing {
-        margin-left: 20%;
+        margin-left: 25%;
         margin-right: 12%;
     }
     #they {
-        margin-left: 20%;
+        margin-left: 25%;
         margin-right: 12%;
     }
     #maid {
-        margin-left: 20%;
+        margin-left: 23%;
         margin-right: 12%;
     }
     #holmes2 {
-        margin-left: 20%;
+        margin-left: 25%;
         margin-right: 12%;
     }
     #at {
-        margin-left: 20%;
+        margin-left: 26%;
         margin-right: 12%;
     }
     #have {
-        margin-left: 20%;
+        margin-left: 25%;
         margin-right: 12%;
     }
     #good {
-        margin-left: 20%;
+        margin-left: 25%;
         margin-right: 12%;
     }
     #not {
-        margin-left: 20%;
+        margin-left: 23%;
         margin-right: 12%;
     }
     #will {
-        margin-left: 20%;
+        margin-left: 25%;
         margin-right: 12%;
     }
     #clapped {
-        margin-left: 20%;
+        margin-left: 25%;
         margin-right: 12%;
     }
     #delighted {
-        margin-left: 20%;
+        margin-left: 25%;
         margin-right: 12%;
     }
 
@@ -354,6 +345,11 @@ a[title].pagenum:after {
         text-align: center;
     }
 
+    .center {
+
+        text-align: center;
+    }
+
 @media only screen and (max-width: 800px) {
 
     body {
@@ -362,112 +358,115 @@ a[title].pagenum:after {
 
     pre { 
         text-align: center;
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .5em;
      }
      
      .hide {
          visibility: hidden;
      }
      .hidehand {
-       padding-left: 25%;
+       padding-left: 17%;
      }
      h1 {
-         font-family: address-sans-pro, sans-serif;
-         font-weight: 600;
-         font-style: normal;
-         margin-left: 26%;
+        font-family: futura-pt, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+    
 
      }
      .chap {
-         margin-left: 20%;
-         margin-right: 12%;
+         margin-left: 17%;
+         margin-right: 17%;
      }
      #frontis {
-         padding-left: 30%;
+         padding-left: 25%;
      }
      .captionnomb {
-         font-family: geneo-std, sans-serif;
-         font-weight: 400;
-         font-style: italic;
-         color:#0B549B;
-         padding-left: 35%;
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: italic;
+        color: #000000;
      }
      .caption2nomtright {
-         font-family: mrlackboughs-pro, sans-serif;
-         font-weight: 400;
-         font-style: normal;
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: italic;
          padding-left: 65%;
      
      }
      .title {
-         font-family: address-sans-pro, sans-serif;
-         font-weight: 400;
-         font-style: normal;
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: regular;
          padding-left: 13%;
          text-align: center;
+         font-size: .7em;
      }
      
      .titlemt4 {
-         font-family: address-sans-pro, sans-serif;
-         font-weight: 400;
-         font-style: normal;
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: regular;
          padding-left: 13%;
          text-align: center;
+         font-size: .7em;
      }
      .figcenterfig120 {
-         padding-left: 48%;
+         padding-left: 46%;
      } 
          
      .line {
-         margin-left: 33%;
-         margin-right: 25%;
+         margin-left: 42%;
+         margin-right: 34%;
      }
      #Contents {
-         font-family: mr-donaldson, sans-serif;
-         font-weight: 200;
-         font-style: normal;
-         padding-left: 24%;
-         font-size: 3%;
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: regular;
+   
        
      
      }
-     .tdr2 {
-         font-family: geneo-std, sans-serif;
-         font-weight: 400;
-         font-style: italic;
-         padding-left: 30%;
-      
+ 
+     .h2 {
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: regular;
+         padding-left: 0%;
      
      }
      table {
-         padding-left: 25%;
+         padding-left: 12%;
      }
      .tdr {
-         font-family: geneo-std, sans-serif;
-         font-weight: 400;
-         font-style: italic;
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: regular;
      
      }
      
      .tdlhang {
-         font-family: geneo-std, sans-serif;
-         font-weight: 400;
-         font-style: italic;
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: regular;
      
      
      }
      
      .tdlv {
-         font-family: geneo-std, sans-serif;
-         font-weight: 400;
-         font-style: italic;
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: regular;
          
         
      }
      #Illustrations {
-         font-family: mr-donaldson, sans-serif;
-         font-weight: 200;
-         font-style: normal;
-         padding-left: 20%;
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: regular;
          font-size: 3%;
      
      }
@@ -579,7 +578,7 @@ a[title].pagenum:after {
             right: 0;
             height: 100%;
             width: 50%;
-            background: #ACACAD;
+            background: rgb(255, 255, 255);
             transform: skew(0deg, -6deg);
             
       
@@ -592,7 +591,7 @@ a[title].pagenum:after {
              width: .2em;
              box-sizing: content-box;
              height: 0.2em;
-             border: 0.1em solid rgb(102, 99, 99);
+             border: 0.1em solid rgb(255, 255, 255);
              position: relative;
              border-radius: 0.2em;
              margin-right: 1%;
