--- a/style.css
+++ b/style.css
@@ -2,17 +2,21 @@
 
 pre { 
    text-align: center;
+   font-family: geneo-std, sans-serif;
+   font-weight: 400;
+   font-style: italic;
+   font-size: .5em;
 }
 
 .hide {
     visibility: hidden;
 }
 .hidehand {
-  padding-left: 32%;
+  padding-left: 52%;
 }
 h1 {
-    font-family: address-sans-pro, sans-serif;
-    font-weight: 600;
+    font-family: futura-pt, sans-serif;
+    font-weight: 400;
     font-style: normal;
     text-align: center;
 }
@@ -42,6 +46,7 @@ h1 {
     font-weight: 400;
     font-style: normal;
     text-align: center;
+   
 }
 
 .titlemt4 {
@@ -58,9 +63,9 @@ h1 {
     margin-right: 20%;
 }
 #Contents {
-    font-family: mr-donaldson, sans-serif;
-    font-weight: 200;
-    font-style: normal;
+    font-family: geneo-std, sans-serif;
+    font-weight: 400;
+    font-style: italic;
 
 
 }
@@ -74,13 +79,15 @@ table {
     font-style: italic;
     
 
-}    .tdr2 {
+}   
+.tdr2 {
         font-family: roboto, sans-serif;
         font-weight: 400;
         font-style: regular;
         padding-left: 23%;
      
-     }
+    
+}
 
 .tdlhang {
     font-family: geneo-std, sans-serif;
@@ -98,9 +105,9 @@ table {
    
 }
 #Illustrations {
-    font-family: mr-donaldson, sans-serif;
-    font-weight: 200;
-    font-style: normal;
+    font-family: geneo-std, sans-serif;
+    font-weight: 400;
+    font-style: italic;
     font-size: 3%;
 
 }
@@ -114,10 +121,11 @@ table {
  }
 
 h2 {
-    font-family: mr-donaldson, sans-serif;
-    font-weight: 200;
-    font-style: normal;
+    font-family: geneo-std, sans-serif;
+    font-weight: 400;
+    font-style: italic;
     text-align: center;
+ 
     
 
    
@@ -125,7 +133,7 @@ h2 {
 }
 
 .ornate {
-    font-family: mr-donaldson, sans-serif;
+    font-family: annabelle-jf, sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 1em;
@@ -135,7 +143,7 @@ h2 {
         
 }
 .ornate:nth-of-type(1) {
-    font-family: mr-donaldson, sans-serif;
+    font-family: annabelle-jf, sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 2em;
@@ -159,8 +167,8 @@ h3 {
 }
 
 p {
-    margin-left: 15%;
-    margin-right: 20%;
+    margin-left: 12%;
+    margin-right: 27%;
     font-family: laca, sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -189,7 +197,7 @@ a[title].pagenum:after {
         margin-bottom: 70px;
         height: 9px;
         width: 90px;
-        margin-right: 19%;
+        margin-right: 49%;
         float: right;
        
    
@@ -252,7 +260,7 @@ a[title].pagenum:after {
         font-weight: 400;
         font-style: italic;
         color:#0B549B;
-        text-align: center;
+      
       }
     
   
@@ -350,30 +358,24 @@ a[title].pagenum:after {
         text-align: center;
     }
 
-@media only screen and (max-width: 800px) {
+    @media only screen and (max-width: 800px)  {
 
-    body {
-        background-color: rgb(123, 182, 68);
-    }
 
     pre { 
-        text-align: center;
-        font-family: roboto, sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: .5em;
+        visibility: hidden;
      }
      
      .hide {
          visibility: hidden;
      }
      .hidehand {
-       padding-left: 17%;
+       padding-left: 7%;
      }
      h1 {
-        font-family: futura-pt, sans-serif;
-        font-weight: 400;
+        font-family: address-sans-pro, sans-serif;
+        font-weight: 600;
         font-style: normal;
+        text-align: center;
     
 
      }
@@ -382,13 +384,14 @@ a[title].pagenum:after {
          margin-right: 17%;
      }
      #frontis {
-         padding-left: 25%;
+         padding-left: 35%;
      }
      .captionnomb {
-        font-family: roboto, sans-serif;
+        font-family: geneo-std, sans-serif;
         font-weight: 400;
         font-style: italic;
-        color: #000000;
+        color:#0B549B;
+        text-align: center;
      }
      .caption2nomtright {
         font-family: roboto, sans-serif;
@@ -426,20 +429,35 @@ a[title].pagenum:after {
         font-family: roboto, sans-serif;
         font-weight: 400;
         font-style: regular;
+       
    
        
      
      }
  
-     .h2 {
+     h2 {
         font-family: roboto, sans-serif;
         font-weight: 400;
         font-style: regular;
-         padding-left: 0%;
+        font-size: 1em;
+        text-align: left;
+        padding-left: 13%;
+       
+     
+     }
+     h2:nth-of-type(3n) {
+        font-family: futura-pt, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 1.5em;
+        padding-left: 2%;
+        text-align: center;
+     
+       
      
      }
      table {
-         padding-left: 12%;
+         padding-left: 1%;
      }
      .tdr {
         font-family: roboto, sans-serif;
@@ -447,11 +465,14 @@ a[title].pagenum:after {
         font-style: regular;
      
      }
+ 
      
      .tdlhang {
         font-family: roboto, sans-serif;
         font-weight: 400;
         font-style: regular;
+       
+
      
      
      }
@@ -467,12 +488,12 @@ a[title].pagenum:after {
         font-family: roboto, sans-serif;
         font-weight: 400;
         font-style: regular;
-         font-size: 3%;
+   
      
      }
      
       a:link {
-          color: black;
+          color: rgb(31, 201, 130);
           text-decoration-line: none;
       }
       a:visited {
@@ -480,41 +501,29 @@ a[title].pagenum:after {
       }
      
      h2 {
-         font-family: address-sans-pro, sans-serif;
-         font-weight: 400;
-         font-style: normal;
-         text-align: center;
-         
-     
-        
+        font-family: roboto, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+          
       
      }
      
      .ornate {
-         font-family: mr-donaldson, sans-serif;
-         font-weight: 400;
-         font-style: normal;
-         font-size: 1em;
-         text-align: center;
+        font-family: p22-fllw-eaglefeather-sc, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 2.5em;
+        text-align: center;
          
-        
-             
      }
-     .ornate:nth-of-type(1) {
-         font-family: mr-donaldson, sans-serif;
-         font-weight: 400;
-         font-style: normal;
-         font-size: 2em;
-         text-align: center;
-         
         
              
      }
      
      h3 {
-         font-family: p22-fllw-eaglefeather-sc, sans-serif;
-         font-weight: 400;
-         font-style: normal;
+        font-family: p22-fllw-eaglefeather-sc, sans-serif;
+        font-weight: 400;
+        font-style: normal;
          font-size: 2.5em;
          text-align: center;
      
@@ -525,12 +534,12 @@ a[title].pagenum:after {
      }
      
      p {
-         margin-left: 15%;
-         margin-right: 20%;
-         font-family: laca, sans-serif;
+         margin-left: 5%;
+         margin-right: 10%;
+         font-family: roboto, sans-serif;
          font-weight: 400;
          font-style: normal;
-         font-size: .5em;
+         font-size: 1em;
          padding-left: 10%;
      }
      
@@ -540,21 +549,21 @@ a[title].pagenum:after {
          border-top: 1px solid; border-bottom: 1px solid;
          padding:5px;
          color: #999999;
-         padding-right: 4%;
+         padding-right: 2%;
          position: absolute;
          right: 0;
-         font-family: mrlackboughs-pro, sans-serif;
+         font-family: annabelle-jf, sans-serif;
          font-weight: 400;
          font-style: normal;
-         font-size: 1.2em;
+         font-size: .5em;
      
          }
          #chevron {
             position: relative;
             padding: 12px;
             margin-bottom: 70px;
-            height: 9px;
-            width: 90px;
+            height: 0px;
+            width: 0px;
             margin-right: 15%;
             float: right;
            
@@ -591,7 +600,7 @@ a[title].pagenum:after {
              width: .2em;
              box-sizing: content-box;
              height: 0.2em;
-             border: 0.1em solid rgb(255, 255, 255);
+             border: 0.1em solid#707070;
              position: relative;
              border-radius: 0.2em;
              margin-right: 1%;
@@ -717,11 +726,372 @@ a[title].pagenum:after {
              text-align: center;
          }
 
-    
-}
-@media only screen and (min-width: 800px) and (max-width: 1280px) {
-    body {
-        background-color: rgb(68, 70, 182);
+        }
     }
+    @media only screen and (min-width: 800px) and (max-width: 1280px) {
 
+}   pre { 
+    font-family: futura-pt, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-style: normal;
+    font-size: .5em;
+ }
+ 
+ .hide {
+     visibility: hidden;
+ }
+ .hidehand {
+   padding-left: 32%;
+ }
+ h1 {
+    font-family: address-sans-pro, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    color: #000000;
+    text-align: center;
+
+
+ }
+ .chap {
+     margin-left: 17%;
+     margin-right: 17%;
+ }
+ #frontis {
+     padding-left: 36%;
+ }
+ .captionnomb {
+    font-family: geneo-std, sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    color:#0B549B;
+    text-align: center;
+ }
+ .caption2nomtright {
+    font-family: mrlackboughs-pro, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    padding-left: 65%;
+   
+ 
+ }
+ .title {
+    font-family: address-sans-pro, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+     text-align: center;
+     font-size: .7em;
+     color: rgb(0, 0, 0);
+     padding-right: 5%;
+ }
+ 
+ .titlemt4 {
+    font-family: address-sans-pro, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+     padding-right: 5%;
+     text-align: center;
+     font-size: .5em;
+ }
+ .figcenterfig120 {
+     padding-left: 44%;
+ } 
+     
+ .line {
+     margin-left: 44%;
+     margin-right: 44%;
+ }
+ #Contents {
+    font-family: geneo-std, sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    text-align: center;
+   
+
+   
+ 
+ }
+
+ h2 {
+    font-family: geneo-std, sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 1em;
+    text-align: center;
+   
+ 
+ }
+ h2:nth-of-type(3n) {
+    font-family: futura-pt, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.5em;
+    padding-left: 2%;
+    text-align: center;
+ 
+   
+ 
+ }
+ table {
+     padding-left: 29%;
+ }
+ .tdr {
+    font-family: roboto, sans-serif;
+    font-weight: 400;
+    font-style: regular;
+ 
+ }
+
+ 
+ .tdlhang {
+    font-family: roboto, sans-serif;
+    font-weight: 400;
+    font-style: regular;
+ 
+ 
+ }
+ 
+ .tdlv {
+    font-family: roboto, sans-serif;
+    font-weight: 400;
+    font-style: regular;
+     
+    
+ }
+ #Illustrations {
+    font-family: roboto, sans-serif;
+    font-weight: 400;
+    font-style: regular;
+
+ 
+ }
+ 
+  a:link {
+      color: rgb(31, 201, 130);
+      text-decoration-line: none;
+  }
+  a:visited {
+      color: rgb(63, 150, 207);
+  }
+ 
+ h2 {
+    font-family: roboto, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+      
+  
+ }
+ 
+ .ornate {
+    font-family: annabelle-jf, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
+     
+ }
+
+ 
+ h3 {
+    font-family: annabelle-jf, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+     font-size: 2.5em;
+     text-align: center;
+ 
+ 
+ }
+ .fig100 {
+    visibility: hidden;
+ }
+ 
+ p {
+     margin-left: 5%;
+     margin-right: 14%;
+     font-family: roboto, sans-serif;
+     font-weight: 400;
+     font-style: normal;
+     font-size: 1em;
+     padding-left: 10%;
+ }
+ 
+ a[title].pagenum:after {
+     content: attr(title);
+     display: block;
+     border-top: 1px solid; border-bottom: 1px solid;
+     padding:5px;
+     color: #999999;
+     padding-right: 2%;
+     position: absolute;
+     right: 0;
+     font-family: annabelle-jf, sans-serif;
+     font-weight: 400;
+     font-style: normal;
+     font-size: .5em;
+ 
+     }
+     #chevron {
+        position: relative;
+        padding: 12px;
+        margin-bottom: 70px;
+        height: 9px;
+        width: 90px;
+        margin-right: 19%;
+        float: right;
+       
+   
+      }
+      #chevron:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 51%;
+        background:  #707070;
+        transform: skew(0deg, 6deg);
+        
+      }
+      #chevron:after {
+        content: '';
+        position: absolute;
+        top: 0; 
+        right: 0;
+        height: 100%;
+        width: 50%;
+        background: #707070;
+        transform: skew(0deg, -6deg);
+        
+  
+      }
+     
+       
+     #magnifying-glass {
+         font-size: 2em;
+         display: inline-block;
+         width: .2em;
+         box-sizing: content-box;
+         height: 0.2em;
+         border: 0.1em solid  #707070;
+         position: relative;
+         border-radius: 0.2em;
+         margin-right: 1%;
+    
+       
+       }
+       #magnifying-glass:before {
+         content: "";
+         display: inline-block;
+         position: absolute;
+         right: -0.25em;
+         bottom: -0.1em;
+         border-width: 0;
+         background: #707070;
+         width: 0.3em;
+         height: 0.07em;
+         transform: rotate(45deg);
+      
+       }
+       #man {
+           padding-left: 35%;
+       }
+       .caption {
+         font-family: geneo-std, sans-serif;
+         font-weight: 400;
+         font-style: italic;
+         color:#0B549B;
+         padding-left: 42%;
+       }
+   
+       .tb {
+         margin-left: 20%;
+         margin-right: 12%;
+       }
+       .centernomb {
+       font-family: geneo-std, sans-serif;
+       font-weight: 400;
+       font-style: italic;
+       color:#0B549B;
+       text-align: center;
+     }
+     .rightnomt {
+         font-family: geneo-std, sans-serif;
+         font-weight: 400;
+         font-style: italic;
+         color:#0B549B;
+         text-align: center;
+        
+     }
+     #door {
+         margin-left: 23%;
+         margin-right: 12%;
+     }
+     #all {
+         margin-left: 25%;
+         margin-right: 12%;
+     }
+     #sherlock {
+         margin-left: 25%;
+         margin-right: 12%;
+     }
+     #glancing {
+         margin-left: 25%;
+         margin-right: 12%;
+     }
+     #they {
+         margin-left: 23%;
+         margin-right: 12%;
+     }
+     #maid {
+         margin-left: 25%;
+         margin-right: 12%;
+     }
+     #holmes2 {
+         margin-left: 25%;
+         margin-right: 12%;
+     }
+     #at {
+         margin-left: 25%;
+         margin-right: 12%;
+     }
+     #have {
+         margin-left: 25%;
+         margin-right: 12%;
+     }
+     #good {
+         margin-left: 23%;
+         margin-right: 12%;
+     }
+     #not {
+         margin-left: 22%;
+         margin-right: 12%;
+     }
+     #will {
+         margin-left: 25%;
+         margin-right: 12%;
+     }
+     #clapped {
+         margin-left: 25%;
+         margin-right: 12%;
+     }
+     #delighted {
+         margin-left: 25%;
+         margin-right: 12%;
+     }
+ 
+     .books {
+         font-family: mr-donaldson, sans-serif;
+         font-weight: 200;
+         font-style: normal;
+         font-size: 3%;
+         text-align: center;
+     }
+ 
+     ul {
+         text-align: center;
+         list-style-type: none;
+     }
+     .noi {
+        text-align: center;
+     }
+    
 }
